# daily-coding-challenge

./: .gitignore  README.md
dailies/1/: CMakeLists.txt  README.md
dailies/1/hashing/: function.h  meta.h  table.h
dailies/2/: CMakeLists.txt  README.md
dailies/2/hashing/: division.h  identity.h  multiplication.h
dailies/3/: CMakeLists.txt  README.md
dailies/3/hashing/: chaining.h
dailies/4/: CMakeLists.txt  README.md
dailies/4/hashing/: merkle_damgard.h  traits.h
dailies/4/include/: CMakeLists.txt
dailies/4/include/hashing/: merkle_damgard.h  traits.h
dailies/4/include/hashing/detail/: traits.h
dailies/4/src/: CMakeLists.txt  example.cpp
dailies/5/: CMakeLists.txt  README.md
dailies/5/metrics/: uniformity.h
dailies/5/metrics/detail/: chi_squared.h
dailies/6/: CMakeLists.txt  README.md
dailies/6/graph/: edge.h  graph.h
dailies/6/graph/detail/: traits.h
dailies/7/: CMakeLists.txt  README.md
dailies/7/edge/graph/detail/: edge_impl.h  traits_impl.h
lang/cpp/: 1  2  3  4  5  6  7  CMakeLists.txt
lang/cpp/doc/: Doxyfile
lang/cpp/test/: CMakeLists.txt
lang/cpp/test/1/: CMakeLists.txt  test.cpp
lang/cpp/test/2/: CMakeLists.txt  test.cpp
lang/cpp/test/3/: CMakeLists.txt  test.cpp
lang/cpp/test/4/: CMakeLists.txt  test.cpp
lang/cpp/test/5/: CMakeLists.txt  test.cpp
lang/cpp/test/6/: CMakeLists.txt  test.cpp
lang/cpp/test/7/: CMakeLists.txt  test.cpp
